--- a/pom.xml
+++ b/pom.xml
@@ -86,4 +86,12 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/francois-dorval/SpoilGotApp</url>
+		</repository>
+	</distributionManagement>
+
 </project>
