--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,7 @@ jobs:
         java-version: 1.11
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Publish with Maven
+      run: mvn -B deploy
+      env:
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
